--- a/ParpeCamera/Base.lproj/Main.storyboard
+++ b/ParpeCamera/Base.lproj/Main.storyboard
@@ -16,7 +16,20 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="plK-Ww-ebj">
+                                <rect key="frame" x="231" y="285" width="139" height="30"/>
+                                <state key="normal" title="Open Parpe Camera"/>
+                                <connections>
+                                    <action selector="openCamera:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8pE-MU-P1w"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="plK-Ww-ebj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="NS5-Da-Nyc"/>
+                            <constraint firstItem="plK-Ww-ebj" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="lgj-i5-gZo"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
