--- a/ParpeCamera/Base.lproj/Main.storyboard
+++ b/ParpeCamera/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11535.1" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11535.1" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="UE7-6B-hYz">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -22,22 +22,114 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="plK-Ww-ebj">
-                                <rect key="frame" x="118" y="318.5" width="139" height="30"/>
-                                <state key="normal" title="Open Parpe Camera"/>
+                                <rect key="frame" x="111.5" y="317.5" width="152" height="32"/>
+                                <color key="backgroundColor" red="0.0" green="0.70196078429999997" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                <state key="normal" title="Open Parpe Camera">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
                                     <action selector="openCamera:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8pE-MU-P1w"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fl5-CH-d1i">
+                                <rect key="frame" x="134" y="530" width="107" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="0.70196078429999997" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="107" id="DRk-v4-cxc"/>
+                                    <constraint firstAttribute="height" constant="30" id="v6W-le-VXW"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                                <state key="normal" title="Open Detail">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="sgZ-sg-a1a" kind="show" id="wyR-ck-vLC"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qTV-tC-gk2">
+                                <rect key="frame" x="168.5" y="590" width="38" height="32"/>
+                                <color key="backgroundColor" red="0.0" green="0.70196078429999997" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                                <state key="normal" title="teste">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="iM8-FU-Qah" kind="show" id="qam-w2-oVF"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.1450980392" green="0.32549019610000002" blue="0.60392156860000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="qTV-tC-gk2" secondAttribute="bottom" constant="45" id="3N9-ac-4Qc"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="fl5-CH-d1i" secondAttribute="bottom" constant="107" id="AmC-uz-v6o"/>
                             <constraint firstItem="plK-Ww-ebj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="NS5-Da-Nyc"/>
+                            <constraint firstItem="fl5-CH-d1i" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RVG-rY-oyv"/>
                             <constraint firstItem="plK-Ww-ebj" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="lgj-i5-gZo"/>
+                            <constraint firstItem="qTV-tC-gk2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="z7B-bm-JOr"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="fFx-ya-evO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="744.79999999999995" y="-197.45127436281859"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="CQp-Yd-D4J">
+            <objects>
+                <viewController id="sgZ-sg-a1a" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="uyQ-Ki-NcM"/>
+                        <viewControllerLayoutGuide type="bottom" id="DjS-J2-z0T"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ek5-O6-QFu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.0" green="0.70196078429999997" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VRu-lt-bxG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1588" y="-197"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="hRr-bV-1I4">
+            <objects>
+                <viewController id="iM8-FU-Qah" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="UXa-4g-TYh"/>
+                        <viewControllerLayoutGuide type="bottom" id="iED-wh-peG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fU3-im-8fY">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xB7-u4-gRr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1596" y="439"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="zbs-ts-F2e">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UE7-6B-hYz" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="b6T-TB-52g">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="p0m-ZW-u8e"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MM9-Gi-6xL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-55.200000000000003" y="-543.77811094452773"/>
         </scene>
     </scenes>
 </document>
